--- a/web/index.html
+++ b/web/index.html
@@ -24,12 +24,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="company_website">
+  <meta name="description" content="Arthultib - Your Premier Destination for High-Quality Medical Supplies">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>company_website</title>
+  <title>Arthultib</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
