Your commit message here

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,9 @@
   <title>Arthultib</title>
   <link rel="manifest" href="manifest.json">
 </head>
+<!-- Add reCAPTCHA container -->
+<div id="recaptcha-container"></div>
+
 <body>
   <script src="flutter_bootstrap.js" async></script>
 </body>
